--- a/frontend/css/styles_loginPage.css
+++ b/frontend/css/styles_loginPage.css
@@ -7,7 +7,7 @@ body
 {
     font-size: 50px;
     width: 100%;
-    margin: 2% 5%;
+    margin-left: 1.5%;
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
     color: #ffffff;
@@ -30,6 +30,19 @@ body
     margin-left: 15%;
     padding: 16px;
     background-color: #100b36;
+}
+
+.registerFields
+{
+    text-align: center;
+    font-size: 20px;
+    border-radius: 20px;
+    width: 70%;
+    margin-right: 15%;
+    margin-left: 15%;
+    background-color: aliceblue;
+    color:#100b36;
+    align-self: inherit;
 }
 
 #registerText
