--- a/frontend/css/styles_searchPage.css
+++ b/frontend/css/styles_searchPage.css
@@ -1,43 +1,156 @@
-body 
+html *
 {
-    background-color: #100b36;
+    font-family: 'Roboto', sans-serif;
 }
 
-#title 
+body
 {
-    font-size: 40px;
+    background-color: #151426;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#title-container
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    padding: 16px;
+    background-color: #F2DFCE;
+    border-top-right-radius: 12px;
+}
+
+#title
+{
+    font-size: 64px;
     width: 100%;
-    margin: 3%;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: #ffffff;
+    text-align: left;
+    color: #D94A64;
+    margin: 0;
+}
+
+#subtitle
+{
+    font-size: 36px;
+    font-weight: normal;
+    width: 100%;
+    text-align: left;
+    background-color: #85A6A6;
+    margin: 12px;
+    padding: 4px 24px 4px 24px;
+    border-radius: 4px;
+}
+
+.searchContainer
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #85A6A6;
+    padding: 16px;
+}
+
+.searchFieldContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.addField,
+.searchField {
+    text-align: left;
+    font-size: 24px;
+    width: 80%;
+    margin-bottom: 2%;
+    padding: 2px 4px 2px 8px;
+    border:none;
+    border-bottom: 2px solid #151426;
+    background-color: rgba(255, 255, 255, .6);
+}
+
+.searchField:hover,
+.searchField:active,
+.searchField:focus,
+.addField:hover,
+.addField:active,
+.addField:focus{
+    outline: 0;
+    border-bottom: 2px solid #D94A64;
+    background-color: rgba(255, 255, 255, .8);
+}
+
+.searchField::placeholder,
+.addField::placeholder{
+    color: #000000;
+    opacity: 75%;
+}
+
+.growDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #85A6A6;
+    width: 80%;
+    height: 0;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    transition: 1s;
+}
+
+.growDiv span {
+    font-size: 30px;
+    height: 30px;
+}
+
+.growDiv.active {
+    max-height: 100px;
+    transition: 1s;
+}
+
+.addContactContainer
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #85A6A6;
+    width: 100%;
+    padding: 16px 0 8px 24px;
+}
+
+.addField
+{
+    width: 50%;
 }
 
 #loginDiv
 {
     font-size: 30px;
     width: 70%;
-    margin-left: 15%;
     padding: 25px;
-    background-color: #100b36;
 }
 
 #loggedInDiv
 {
     font-size: 20px;
     width: 70%;
-    margin-left: 15%;
     padding: 25px;
-    background-color: #100b36;
 }
 
 #accessUIDiv
 {
     font-size: 30px;
     width: 70%;
-    margin-left: 15%;
     padding: 25px;
-    background-color: #100b36;
 }
 
 p{
@@ -60,30 +173,31 @@ a{
     display: block;
     text-align: center;
     color: #d5e5e8;
-    background-color: #100b36;
     margin-left: 25%;
     margin-right: 25%;
 }
 
 .buttons
 {
-    font-size: 30px;
-    border-radius: 25px;
-    width: 50%;
-    margin-left: 25%;
-    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    font-weight: normal;
+    border-radius: 6px;
+    border-style: none;
+    height: 36px;
+    min-width: 128px;
+    color: #ffffff;
+    background-color: #151426;
+    margin: 8px 0 8px 0;
+    cursor: pointer;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
 }
 
 .buttons:hover{
-    background-color: #797979;
+    background-color: #D94A64;
     color: #edf3ff;
+    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.5));
     opacity: 75%;
-}
-
-.links:hover{
-    background-color: #4244a4;
-    color: #FFFFFF;
-    opacity: 100%;
+    transition: filter .3s;
 }
 
 #loginName
@@ -103,14 +217,6 @@ a{
 	font-size: 30px;
 }
 
-input[type="text"],input[type="password"],input[type="search"]{
-    border-radius: 25px;
-    text-align: center;
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-}
 
 #inner-title{
     display: inline-block;
@@ -153,35 +259,6 @@ select{
     font-size: 0.75em;
     font-family: 'Ubuntu', sans-serif;
 }
-
-#contactNameText{
-    border-radius: 25px;
-    text-align: center;
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-}
-
-#contactPhoneNumberText{
-    border-radius: 25px;
-    text-align: center;
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-    color: black;
-}
-
-#contactEmailText{
-    border-radius: 25px;
-    text-align: center;
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-}
-
 #editContact{
     border-radius: 10px;
     background-color: #cafff8;
@@ -281,10 +358,20 @@ td {
     text-align: center;
 }
 
-input[type="search"], input[type="text"] {
-    font-size: 20px; 
-}
-
 #logoutButton {
     font-size: 18px;
 }
+
+/* Color Theme Swatches in Hex */
+.Squire-12-1-hex { color: #D94A64; }
+.Squire-12-2-hex { color: #A65866; }
+.Squire-12-3-hex { color: #151426; }
+.Squire-12-4-hex { color: #85A6A6; }
+.Squire-12-5-hex { color: #F2DFCE; }
+
+/* Color Theme Swatches in RGBA */
+.Squire-12-1-rgba { color: rgba(216, 73, 100, 1); }
+.Squire-12-2-rgba { color: rgba(165, 87, 102, 1); }
+.Squire-12-3-rgba { color: rgba(20, 20, 38, 1); }
+.Squire-12-4-rgba { color: rgba(133, 165, 165, 1); }
+.Squire-12-5-rgba { color: rgba(242, 223, 205, 1); }
