Fixed Edit Contact window
Made it so that Edit Contact window successfully populates with appropriate field values from Search page.

--- a/frontend/css/styles_searchPage.css
+++ b/frontend/css/styles_searchPage.css
@@ -200,7 +200,7 @@ select{
     font-family: Arial, sans-serif;
 }
 
-#editWindowTitle{
+#editContactTitleHeading{
     font-family: Arial, sans-serif;
     color: #cafff8;
     text-align: center;
