updated color schemes and new table styles

--- a/css/styles_loginPage.css
+++ b/css/styles_loginPage.css
@@ -14,7 +14,7 @@ html *
 
 body
 {
-    background-color: #151426;
+    background-color: #6A8E7F;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
